--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "router": "^1.3.7",
+    "sass": "^1.58.3",
     "swiper": "^8.4.3",
     "web-vitals": "^2.1.4"
   },
